apps/log680/overlays/staging/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log680
spec:
  template:
    spec:
      containers:
        - name: metrics
          image: docker.io/funnyadd/metrics-a25-grp1-eq10:staging-20251103-204013-75a4860 # {"$imagepolicy": "flux-system:metrics-staging"}
        - name: mobilitysoft
          image: docker.io/funnyadd/mobilitysoft-eq10:staging-20251103-124211-e2304b7 # {"$imagepolicy": "flux-system:mobilitysoft-staging"}
