apps/log680/overlays/staging/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log680
spec:
  ingressClassName: nginx
  rules:
    - host: staging-metrics-api.home.adammihajlovic.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: metrics, port: { number: 5001 } }
    # - host: staging-mobilitysoft-api.home.adammihajlovic.ca
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service: { name: mobilitysoft, port: { number: 5002 } }
